--- a/event.html
+++ b/event.html
@@ -16,10 +16,10 @@ gtag("config", "G-79LZQYKZZV");
 <script>
 function trackCTA(){
 	// 送出事件紀錄
-	gtag("event", "點擊", {
-		"event_category":"CTA",
-		"event_label":"頁面標題",
-		"value": 1
+	gtag("event", "點閱", {
+		"event_category":"類別",
+		"event_label":"標題按鈕",
+		"value": 100
 	});
 	alert("Event Sent!");
 }
